--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "ionic:serve": "npm run dev -- --open"
   },
   "dependencies": {
+    "@capacitor/app": "latest",
+    "@capacitor/core": "latest",
+    "@capacitor/haptics": "latest",
+    "@capacitor/keyboard": "latest",
+    "@capacitor/status-bar": "latest",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
     "@types/react-router": "^5.1.20",
@@ -23,13 +28,10 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "@capacitor/app": "latest",
-    "@capacitor/core": "latest",
-    "@capacitor/keyboard": "latest",
-    "@capacitor/haptics": "latest",
-    "@capacitor/status-bar": "latest"
+    "swiper": "^11.1.8"
   },
   "devDependencies": {
+    "@capacitor/cli": "latest",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -45,7 +47,6 @@
     "terser": "^5.4.0",
     "typescript": "^5.1.6",
     "vite": "~5.2.0",
-    "vitest": "^0.34.6",
-    "@capacitor/cli": "latest"
+    "vitest": "^0.34.6"
   }
 }
